--- a/research.html
+++ b/research.html
@@ -7,36 +7,38 @@ permalink: /research/
 <strong><big><a>Working Papers</a></big></strong> <br><br>
 
 <strong><a href="https://shasha-li.github.io/content/Lighthouse-Li.pdf">Lighthouse in the Dark: Search in Marketplace Lending</a></strong> <em><small> New Draft Soon!</small></em> <br>
-<em><small>Presentation: 2024 AEA Poster; 2022 EEA; 2022 China Fintech Research Conference; 2020 China Finance Doctoral Forum; Bocconi Finance Brown Bag Seminar; LBS PhD Seminar; 2019 Econometric Society European Winter Meeting; Bocconi La Strada Seminar; 2020 Royal Economic Society's Annual Conference  (cancelled due to Covid-19) </small></em>
+<em><small>Presentation: 2024 AEA Poster; 2022 EEA; 2022 China Fintech Research Conference; 2020 China Finance Doctoral Forum; Bocconi Finance Brown Bag Seminar; LBS Ph.D. Seminar; 2019 Econometric Society European Winter Meeting; Bocconi La Strada Seminar; 2020 Royal Economic Society's Annual Conference  (canceled due to Covid-19) </small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b>Technology has brought numerous unsophisticated individuals to marketplaces. This paper sheds light on search frictions in a two-sided online personal loan market. Empirical evidence reveals that borrowers encounter a concave demand curve in this market. However, due to limited knowledge, borrowers fail to propose optimal interest rates near average.  Exploiting the staggered introduction of private lending registration service centers (PLcenters) in Chinese cities, I demonstrate the role of public information services in mitigating frictions and improving market outcomes. These PLcenters aim to disseminate financial knowledge and enhance transparency. Using staggered difference-in-differences (DID) analysis, I find PLcenters effectively boost marketplace lending and increase match rates. Remarkably, PLcenters help borrowers, especially those less sophisticated, propose better interest rates, leading to lower costs and reduced interest rate dispersion.  In addition, I present a directed search model to explain economic mechanisms and provide welfare implications.
   </p><br>
+
+<strong><a href="https://shasha-li.github.io/content/Manipulation.pdf">Data Manipulation in Marketplace Lending</a></strong> 
+<br>with <a href="https://www.london.edu/phd/profiles/yutong-hu">Yutong Hu</a><br>
+<em><small>Presentation: 2024 Wharton Financial Regulation Conference (scheduled); EWMES 2023, Manchester; 2nd International Cardiff Fintech Conference; 2023 WinE Mentoring Retreat; 2022 HU-IWH Joint Junior Seminar; 2022 China Fintech Research Conference*</small></em>
+<p style="text-align:justify"><b><i>Abstract: </i>
+  </b> We document that online marketplace lending platforms only selectively disclose their data, which significantly reduces market efficiency. Using peer-to-peer (P2P) lending data from a leading platform in China, we observe that the platform substantially under-reports actual loan default rates by cooperating with offline sister companies and using the risk control fund. Our baseline estimations suggest that the monthly default rates are under-reported by at least 5.26 percentage points on average. The Loss Given Default (LGD)-adjusted interest rate in the online lending market is not at a market-efficient level. The behavior of hiding default data drives the online market further away from information efficiency and lowers the quality of active borrowers. Moreover, evidence from secondary market loan trading implies hiding default rates makes the market more fragile. 
+  </p><br>
+<br> 
 
 <strong><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4589189">Green Investing, Information Asymmetry, and Capital Structure</a></strong> 
 <br>with <a href="https://biao-yang-sjtu.github.io/">Biao Yang</a><br>
 <em><small>Presentation: 2024 AFA AFFECT Mentoring; CFAC2023*; 2023 EEA*; Yonsei university; Bocconi La Strada Seminar*; 2021 Econometric Society European Winter Meeting; IWH Brown Bag Seminar</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
-  </b>We investigate how optimal attention allocation of green-motivated investors changes information asymmetry in financial markets and thus affects firms' financing costs. To guide our empirical analysis, we propose a model where an investor with green taste endogenously allocates limited attention to study market-level or firm-specific fundamental shocks. We find that more green-motivated investors tend to pay more attention to green firm-level information than market-level information. Thus, higher green taste leads to less category learning behaviour. It reduces the information asymmetry of green firms, leading to lower leverage and lower cost of equity capital. Moreover, the information asymmetry of brown firms and the market increases with the green taste. Greater green attention is associated with less market efficiency. We provide empirical evidence to support our model predictions by using US data. Our paper shows how the growing demand for sustainable investing shifts investors' attention and benefits eco-friendly firms. 
+  </b>We investigate how optimal attention allocation of green-motivated investors changes information asymmetry in financial markets and thus affects firms' financing costs. To guide our empirical analysis, we propose a model where an investor with green taste endogenously allocates limited attention to study market-level or firm-specific fundamental shocks. We find that more green-motivated investors tend to pay more attention to green firm-level information than market-level information. Thus, a higher green taste leads to less category learning behavior. It reduces the information asymmetry of green firms, leading to lower leverage and lower cost of equity capital. Moreover, the information asymmetry of brown firms and the market increases with the green taste. Greater green attention is associated with less market efficiency. We provide empirical evidence to support our model predictions by using US data. Our paper shows how the growing demand for sustainable investing shifts investors' attention and benefits eco-friendly firms. 
   </p><br>
 
 <strong><a href="https://shasha-li.github.io/content/Cost%20of%20default%20in%20CIA%20economy.pdf">The Cost of Default in a Cash-In-Advance Economy</a></strong>
 <br>with <a href="https://yonsei.pure.elsevier.com/en/persons/kwangwon-ahn">Kwangwon Ahn</a>, and <a href="https://sites.google.com/view/daeyonglee/">Daeyong Lee</a><br>
-<p style="text-align:justify"><b><i>Abstract: </i></b>This study shows that corporate default is not trivial to the real economy. Under a Cash-
-In-Advance (CIA) framework, we examine the welfare cost of default and how the
-injection of cash affects welfare cost of default. Incorporating non-linear form of nonpecuniary
-default penalty into a CIA model, we find that default causes around 1% loss
-in consumption. The negative effects of default on welfare is significantly greater in an
-economy with higher money growth rate only in the long-run but not in the short-run.</p><br><br><br>
+<p style="text-align:justify"><b><i>Abstract: </i></b>This study shows that corporate default is not trivial to the real economy. Under a Cash-In-Advance (CIA) framework, we examine the welfare cost of default and how the injection of cash affects the welfare cost of default. Incorporating a non-linear form of nonpecuniary default penalty into a CIA model, we find that default causes around a 1% loss in consumption. The negative effects of default on welfare are significantly greater in an economy with a higher money growth rate only in the long run but not in the short run.</p><br><br><br>
 
 
 
 <strong><big><a>Work in Progress</a></big></strong> <br> <br> 
  
-<strong><a href="https://shasha-li.github.io/content/Manipulation.pdf">Data Manipulation in Marketplace Lending</a></strong> 
-<br>with <a href="https://www.london.edu/phd/profiles/yutong-hu">Yutong Hu</a><br>
-<em><small>Presentation: 2024 Wharton Financial Regulation Conference (scheduled); EWMES 2023, Manchester; 2nd International Cardiff Fintech Conference; 2023 WinE Mentoring Retreat; 2022 HU-IWH Joint Junior Seminar; 2022 China Fintech Research Conference*</small></em>
+<strong><a href="">Local Media Closures and Corporate Debt Financing</a></strong> 
 <p style="text-align:justify"><b><i>Abstract: </i>
-  </b> We document that online marketplace lending platforms only selectively disclose their data, which significantly reduces market efficiency. Using peer-to-peer (P2P) lending data from a leading platform in China, we observe that the platform substantially under-reports actual loan default rates by cooperating with offline sister companies and using the risk control fund. Our baseline estimations suggest that the monthly default rates are under-reported by at least 5.26 percentage points on average. The Loss Given Default (LGD)-adjusted interest rate in the online lending market is not at a market-efficient level. The behaviour of hiding default data drives the online market further away from information efficiency and lowers the quality of active borrowers. Moreover, evidence from secondary market loan trading implies hiding default rates makes the market more fragile. 
+  </b>  Using US data, I find local newspaper closures reduce geographically concentrated firms’ cost of debt. e loan-to-bond ratio of medium rms decreases aer local newspaper
+closures.
   </p><br>
 <br> 
 <i>*: presented by coauthor(s)</i>
